# gmaildigest

./: .gitignore  CHANGES.md  Dockerfile  LICENSE  README-v2.md  README.md  __init__.py  docker-compose.yml  gmaildigest.py  load_env.py  pyproject.toml  requirements.txt  setup.py  setup_config.py  unit_test_results.txt  v2-specification.md
.cursor/: scratchpad.md
.github/workflows/: ci.yml
gmaildigest/: auth.py  gmail_service.py  summarization.py  telegram_bot.py
src/gda/: __init__.py  cli.py  config.py  setup_config.py
src/gda/auth/: __init__.py  exceptions.py  manager.py  store.py
src/gda/bot/: __init__.py  app.py  commands.py  handlers.py  ui.py
src/gda/gmail/: __init__.py  models.py  service.py
src/gda/summary/: models.py
src/gda/utils/: paths.py
tests/: test_gmail_service.py  test_plan.md
tests/unit/: test_bot_app.py  test_bot_initialization.py  test_cli_run_async.py  test_gmail_service.py  test_telegram_bot.py
