[tool.poetry]
name = "gmaildigest"
version = "2.0.0"
description = "Gmail Digest Assistant - Intelligent email summarization and notification system"
authors = ["Kai Peace <kai@peacefamily.us>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/aNtiTrust-38/gmaildigest"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business :: Groupware",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
packages = [{include = "gda", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
google-api-python-client = "^2.100.0"
google-auth = "^2.40.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.0.0"
python-telegram-bot = "^20.0"
aiohttp = "^3.8.5"
dateparser = "^1.1.8"
pytz = "^2023.3"
cryptography = "^41.0.0"
anthropic = "^0.51.0"
nltk = "^3.8.1"
sumy = "^0.11.0"
httpx = "^0.27.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
pysqlcipher3 = "^1.2.0"
scikit-learn = "^1.3.1"
typer = "^0.9.0"
rich = "^13.5.2"
PyQt6 = {version = "^6.5.2", optional = true}

[tool.poetry.extras]
gui = ["PyQt6"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.5.1"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
pytest-mock = "^3.11.1"
types-pytz = "^2023.3.0.0"
types-dateparser = "^1.1.4.8"

[tool.poetry.scripts]
gda = "gda.cli:main"
gda-setup = "gda.setup_config:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
